change in the date and time slot

--- a/package.json
+++ b/package.json
@@ -68,9 +68,12 @@
     "three": "^0.176.0",
     "uuid": "^11.1.0",
     "vaul": "^0.9.3",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8","react-calendar": "^6.0.0",
+    "react-datepicker": "^4.25.0",
+    "react-datetime-picker": "^6.0.1"
   },
   "devDependencies": {
+     "@types/react-datepicker": "^6.2.0",
     "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
